tests/fixtures/errors/e0501_drive_to_wire.mimz
// expect: E0501
module M {
  in a: bit
  out y: bit
  wire w: bit = a
  w = a
  y = w
}
